--- a/README
+++ b/README
@@ -3,11 +3,11 @@ This is the code of the Dancer's website
 http://perldancer.org/
 
 
-To enable the dancfloor page on your development machine you need to register on
+To enable the dancefloor page on your development machine you need to register on
 http://webthumb.bluga.net/
 
 and fetch the User ID and API Key from
 http://webthumb.bluga.net/user
 
-copy webthumb-api.yml.skel to webthumb-api.yml
+copy web thumb-api.yml.skel to web thumb-api.yml
 and write in the values in that file.
